biscuit-terminal/lib/tests/snapshots/layout_matrix__BlockQuote__align_center.snap
---
source: biscuit-terminal/lib/tests/layout_matrix.rs
expression: block
---
BESPOKE
             │ The best way to predict the future is to invent it.
             │
             │ — Alan Kay
---
TREE
│ The best way to predict the future is to invent it.
│ 
│ — Alan Kay
