biscuit-terminal/lib/tests/snapshots/layout_matrix__BlockQuote__top_margin_2.snap
---
source: biscuit-terminal/lib/tests/layout_matrix.rs
expression: block
---
VIA_RENDER


│ The best way to predict the future is to invent it.
│ 
│ — Alan Kay
---
VIA_TREE_DIRECT


│ The best way to predict the future is to invent it.
│ 
│ — Alan Kay
